src/scss/common/assignment-progress.scss
/* ... */
.assignment-progress-details, .group-progress-summary {
  td, .key-cell, tr {
    .completed {
      background-image: $completed-bg-img;
      background-size: $completed-bg-size;
    }
    .fully-attempted {
      background-image: $fully-attempted-bg-img;
      background-size: $fully-attempted-bg-size;
    }
    .passed {
      background-image: $passed-bg-img;
      background-size: $passed-bg-size;
    }
    .in-progress {
      background-image: $in-progress-bg-img;
      background-size: $in-progress-bg-size;
    }
    .failed {
      background-image: $failed-bg-img;
      background-size: $failed-bg-size;
    }
  }

  .completed th {
    &:first-child { color: rgba($perfect-fill, 1); }
    &.total-column {
      background-image: $completed-total-bg-img;
      background-size: $completed-bg-size;
    }
  }

  .fully-attempted th {
    &:first-child { color: rgba($fully-attempted-fill, 1); }
    &.total-column {
      background-image: $fully-attempted-total-bg-img;
      background-size: $fully-attempted-bg-size;
    }
  }

  .passed th {
    &:first-child { color: rgba($passed-fill, 1); }
    &.total-column {
      background-image: $passed-total-bg-img;
      background-size: $passed-bg-size;
    }
  }

  .in-progress th {
    &:first-child  { color: rgba($default-name-fill, 1); }
    &.total-column {
      background-image: $in-progress-total-bg-img;
      background-size: $in-progress-bg-size;
    }
  }

  .failed th {
    &:first-child { color: rgba($failed-fill, 1); }
    &.total-column {
      background-image: $failed-total-bg-img;
      background-size: $failed-bg-size;
    }
  }

  .not-attempted {
    th {
      &:first-child { color: rgba($default-name-fill, 1); }
    }
  }
  .revoked {
    th {
      &:first-child {
        color: gray;
      }
    }
  }

  .key-cell span {
    border: 1px solid black;
    display: inline-block;
    width: 22px;
    height: 22px;
  }

  .key-description {
    text-align: left;
    font-weight: 400;
    margin: 0;
    padding: 0;
  }
}

.assignment-progress-details.colour-blind,
.group-progress-summary.colour-blind {
  td, .key-cell, tr {
    .completed {
      background-image: $completed-cb-bg-img;
    }
    .fully-attempted {
      background-image: $fully-attempted-cb-bg-img;
    }
    .passed {
      background-image: $passed-cb-bg-img;
    }
    .in-progress {
      background-image: $in-progress-cb-bg-img;
    }
    .failed {
      background-image: $failed-cb-bg-img;
    }
  }

  .completed th.total-column { background-image: $completed-cb-bg-img;}
  .passed th.total-column { background-image: $passed-cb-bg-img; }
  .fully-attempted th.total-column { background-image: $fully-attempted-cb-bg-img; }
  .in-progress th.total-column { background-image: $in-progress-cb-bg-img; }
  .failed th.total-column { background-image: $failed-cb-bg-img; }
}

.assignment-progress-options {
  clear: both;
  font-size: 0.875rem;
  text-align: right;
}

.assignment-progress-options > label {
  margin: auto 1rem auto 0.25rem;
  
  > input {
    vertical-align: middle;
  }
}

.assignment-progress-details {
  counter-reset: board-count;
}

.assignment-progress-gameboard {
  padding: 0 1.5rem 1.5rem 1.5rem;
}

.assignment-progress-gameboard .gameboard-header {
  background: #fff;
  border: 1px solid $gray-118;
  align-content: stretch;
  display: flex;
  cursor: pointer;
  justify-content: space-between;
  align-items: stretch;
}

.assignment-progress-gameboard .gameboard-title {
  display: flex;
  border: 0px;
  text-decoration: none;
  &:hover {
    text-decoration: underline;
  }
}

.assignment-progress-gameboard .gameboard-header > *:first-child:before {
  background: $gray-118 !important;
  counter-increment: board-count;
  content: counter(board-count) ". ";
  display: inline-grid;
  height: 100%;
  padding: 0.5rem 1rem;
  font-weight: bold;
  align-content: center;
}
.assignment-progress-gameboard .gameboard-title span {
  padding-left: 0.75rem;
  font-size: 1.2rem;
  text-align: start;
}
.gameboard-due-date {
  font-weight: normal;
  color: $gray-160;
  font-size: 0.875rem !important;
}

.gameboard-links {
  align-items: baseline;
  display: flex;
  padding-right: 0.5rem;
  margin-left: auto;
}
.gameboard-links > * {
  margin-right: 0.3rem;
  min-width: max-content !important;
}

.assignment-progress-table-wrapper {
  overflow: auto;
  display: block;
  max-height: max(200px, 65vh);
}

.group-progress-summary {
  background: $gray-103;
  border: 1px solid $gray-118;
}

.gameboard-header + .assignment-progress-progress, // assignment progress assignment view
.gameboard-header + .assignment-progress-details > .assignment-progress-progress, // assignment progress test view
.group-progress-summary {
  border-top: none;
}

.group-progress-summary table {
  border-left: 1px solid $gray-118;
  border-right: 1px solid $gray-118;
}

.progress-header {
  text-align: center;
  padding: 0.5rem 0;
  @include respond-above(sm) {
    font-size: 1.1rem;
  }
}

.progress-questions {
  border-top: 1px solid $gray-118;
  display: flex;
  justify-content: space-between;
  @include respond-above(sm) {
    font-size: 1.2rem;
  }
  align-items: center;
  background: white;
}

.progress-questions button {
  align-self: flex-end;
  min-width: 65px;
  border-radius: 0;
  padding: 0.5rem 0;
  border: 1px solid $gray-118;
  margin: -1px;
  z-index: 10;
  &.btn.disabled {
    opacity: 0.5;
    border: 1px solid $gray-118;
  }
}

@mixin after-border() {
  content: '';
  position: absolute;
  margin: -0.5px -0.5px;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
}

.single-download {
  position: relative;
  text-align: right;
}

.progress-table-container {
  width: 100% !important;
  display: block;
  overflow-y: auto;
  overflow-x: auto;
  -webkit-overflow-scrolling: touch;
}
/* ... */

